src/assets/main.css
/* ... */
.footer-newsletter-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 80px 0 45px;
  position: relative;
}
@media (max-width: 1199px) {
  .footer-newsletter-wrapper {
    flex-wrap: wrap;
  }
}
.footer-newsletter-wrapper .footer-newsletter-item .widget-head {
  margin-bottom: 30px;
}
.footer-newsletter-wrapper .footer-newsletter-item .footer-content p {
  color: var(--white);
}
.footer-newsletter-wrapper .footer-newsletter-item .social-icon {
  gap: 8px;
  margin-top: 30px;
}
.footer-newsletter-wrapper .footer-newsletter-item .social-icon a {
  width: 36px;
  height: 36px;
  line-height: 36px;
  border-radius: 50px;
  text-align: center;
  color: var(--theme);
  background-color: var(--white);
  transition: all 0.4s ease-in-out;
}
.footer-newsletter-wrapper .footer-newsletter-item .social-icon a:hover {
  background-color: var(--theme);
  color: var(--white);
}
@media (max-width: 1199px) {
  .footer-newsletter-wrapper .newsletter-input {
    margin-top: 20px;
  }
}
.footer-newsletter-wrapper .newsletter-input h2 {
  font-size: 32px;
  color: var(--white);
}
@media (max-width: 767px) {
  .footer-newsletter-wrapper .newsletter-input h2 {
    font-size: 28px;
  }
}
@media (max-width: 575px) {
  .footer-newsletter-wrapper .newsletter-input h2 {
    font-size: 24px;
  }
}
.footer-newsletter-wrapper .newsletter-input p {
  font-size: 18px;
  font-weight: 500;
  color: var(--white);
}
.footer-newsletter-wrapper .newsletter-input .footer-input {
  position: relative;
  margin-top: 30px;
}
.footer-newsletter-wrapper .newsletter-input .footer-input input {
  background: var(--white);
  border: none;
  outline: none;
  width: 100%;
  padding: 18px 20px;
  border-radius: 100px;
  color: #727171;
  line-height: 1;
  text-transform: capitalize;
}
@media (max-width: 991px) {
  .footer-newsletter-wrapper .newsletter-input .footer-input input {
    padding: 15px 20px;
  }
}
@media (max-width: 767px) {
  .footer-newsletter-wrapper .newsletter-input .footer-input input {
    padding: 17px 20px;
  }
}
@media (max-width: 575px) {
  .footer-newsletter-wrapper .newsletter-input .footer-input input {
    padding: 14px 20px;
  }
}
.footer-newsletter-wrapper .newsletter-input .footer-input input::placeholder {
  color: #727171;
}
.footer-newsletter-wrapper .newsletter-input .footer-input .newsletter-btn {
  position: absolute;
  top: 0px;
  right: 0px;
}

.contact-us-main {
  border-radius: 10px;
  padding: 12px 16px;
  background-color: var(--bg);
  text-align: center;
  position: relative;
  transition: all 0.4s ease-in-out;
}
.contact-us-main.style-2 {
  background-color: var(--theme);
}
.contact-us-main.style-2 .contact-box-items {
  border: 1px solid var(--white);
}
.contact-us-main.style-2 .contact-box-items .icon {
  color: var(--white);
}
.contact-us-main.style-2 .contact-box-items .content h3 a {
  color: var(--white);
}
.contact-us-main.style-2 .contact-box-items .content p {
  color: var(--white);
}
.contact-us-main .contact-box-items {
  border-radius: 10px;
  border: 1px solid var(--border);
  padding: 28px 30px;
}
.contact-us-main .contact-box-items .icon {
  margin-bottom: 20px;
}
.contact-us-main .contact-box-items .content h3 {
  font-weight: 600;
  margin-bottom: 5px;
}
.contact-us-main .contact-box-items .content p {
  font-size: 18px;
  font-weight: 400;
  color: var(--text);
}
.contact-us-main:hover {
  background-color: var(--theme);
}
.contact-us-main:hover .contact-box-items .icon img {
  filter: grayscale(100%) brightness(300%);
}
.contact-us-main:hover .contact-box-items .content {
  position: relative;
  z-index: 1;
}
.contact-us-main:hover .contact-box-items .content h3 {
  color: var(--white);
}
.contact-us-main:hover .contact-box-items .content h3 a {
  color: var(--white);
}
.contact-us-main:hover .contact-box-items .content p {
  color: var(--white);
}

.contact-us-wrapper .contact-us-contact {
  padding: 120px 0;
}
@media (max-width: 991px) {
  .contact-us-wrapper .contact-us-contact {
    padding: 80px 0 30px;
  }
}
.contact-us-wrapper .contact-us-contact .comment-form-wrap .form-clt input, .contact-us-wrapper .contact-us-contact .comment-form-wrap .form-clt textarea {
  width: 100%;
  outline: none;
  border: none;
  border-radius: 100px;
  border: 1px solid rgba(255, 255, 255, 0.5);
  padding: 16px 20px;
  background-color: rgba(255, 255, 255, 0.1);
  color: #fff;
  font-weight: 400;
}
.contact-us-wrapper .contact-us-contact .comment-form-wrap .form-clt input:focus, .contact-us-wrapper .contact-us-contact .comment-form-wrap .form-clt textarea:focus {
  border-color: rgba(255, 255, 255, 0.85);
  background-color: rgba(255, 255, 255, 0.15);
  outline: none;
}
.contact-us-wrapper .contact-us-contact .comment-form-wrap .form-clt input::placeholder, .contact-us-wrapper .contact-us-contact .comment-form-wrap .form-clt textarea::placeholder {
  color: var(--white);
}
.contact-us-wrapper .contact-us-contact .comment-form-wrap .form-clt textarea {
  padding-bottom: 100px;
  border-radius: 20px;
  resize: none;
}
.contact-us-wrapper .contact-us-contact .comment-form-wrap .form-clt .nice-select {
  background-color: transparent;
  padding: 16px 20px;
  border-radius: 100px;
  border: 1px solid rgba(255, 255, 255, 0.15);
}
.contact-us-wrapper .contact-us-contact .comment-form-wrap .form-clt .nice-select span {
  font-size: 14px;
  color: var(--white);
  font-weight: 400;
  text-transform: capitalize;
  margin-bottom: 0;
}
.contact-us-wrapper .contact-us-contact .comment-form-wrap .form-clt .nice-select::after {
  right: 25px;
  top: 28px;
}
.contact-us-wrapper .contact-us-contact .comment-form-wrap .form-clt .nice-select .list {
  right: 0;
  background-color: var(--bg);
}
.contact-us-wrapper .contact-us-contact .comment-form-wrap .form-clt .nice-select .option {
  border: none;
  padding: 6px 15px;
}
.contact-us-wrapper .contact-us-contact .comment-form-wrap .theme-btn {
  background-color: transparent;
  border: 1px solid var(--theme);
}
/* ... */

